Finalizado todo os CRUD usando o RabitMQ
